# cordial-modplayer

./: .gitignore  Cargo.toml  README.md  about.toml  build.sh
.github/workflows/: publish.yml
backend/: Cargo.toml
backend/src/: fs.rs  launcher.rs  main.rs  paths.rs
docs/: build-from-src.md
frontend/: .prettierignore  Cargo.toml  audio.worklet.ts  index.html  index.ts  package-lock.json  package.json  style.css  tsconfig.json  vite-env.d.ts  vite.config.js
frontend/components/: App.vue  AppContainer.vue  MusicLibrary.vue  MusicRow.vue  PlayingSongDisplay.vue  SongDisplay.vue
frontend/src/: lib.rs
frontend/typescript_src/: DBHandler.ts  player.ts  songInfo.ts  visualizer.ts
