[package]
name = "cordial_modplayer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false


[dependencies]
axum = { version = "0.7.5", features = ["json"] }
clap = { version = "4.5.16", features = ["derive"] }
directories = "5.0.1"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

serde = { version = "1.0.204", features = ["serde_derive"] }

tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
